ZEE-12103: Updated Scanner Release Notes